// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно формирует параметры запроса для /payment/process при оплате кошельком 1`] = `
Object {
  "pay_by_account": Object {
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате новой картой 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "data": Object {
          "type": "bank_card",
        },
        "payment_token": "super-duper-secret-key",
        "save": true,
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "bank_card",
    "return_url": "https://auto.ru",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате привязанной картой из нового апи 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "data": Object {
          "card_mask": "555555|4444",
          "type": "bank_card",
        },
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "bank_card",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате привязанной картой из старого апи 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "data": Object {
          "card_mask": "444444|4448",
          "type": "bank_card",
        },
      },
    },
    "ps_id": "YANDEXKASSA",
    "ps_method_id": "AC#444444|4448",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате привязанной картой с цвц-подтверждением 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "csc_token": "super-duper-secret-key",
        "data": Object {
          "card_mask": "555555|4444",
          "type": "bank_card",
        },
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "bank_card",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате сбербанком на нашей форме 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "data": Object {
          "phone": "79771234567",
          "type": "sberbank",
        },
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "sberbank",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при оплате сбербанком на сайте сбера 1`] = `
Object {
  "pay_by_payment_method": Object {
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "redirect",
        "data": Object {
          "phone": "79771234567",
          "type": "sberbank",
        },
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "sberbank",
    "ticket_id": "my-awesome-payment",
  },
}
`;

exports[`правильно формирует параметры запроса для /payment/process при пополнение кошелька 1`] = `
Object {
  "account_refill": Object {
    "amount": 10000,
    "pay_gate_context": Object {
      "yandex_kassa_context": Object {
        "confirmation_type": "external",
        "data": Object {
          "type": "bank_card",
        },
        "payment_token": "super-duper-secret-key",
        "save": true,
      },
    },
    "ps_id": "YANDEXKASSA_V3",
    "ps_method_id": "bank_card",
    "ticket_id": "my-awesome-payment",
  },
}
`;
